--- a/vimwiki/学习笔记/Python/内置函数.wiki
+++ b/vimwiki/学习笔记/Python/内置函数.wiki
@@ -188,7 +188,7 @@ helloworld
 >>> <module 'os' from '/usr/local/lib/python2.2/os.pyc'>
 }}}
 
-== map（方法的批量调用） ==
+== map（列表数据的批量处理） ==
 - 将一组参数列表传入到给定的函数中，并依次调用该函数，最后将函数的执行结果传入到列表中并返回。
 
 {{{class="brush:python"
@@ -208,16 +208,21 @@ helloworld
 '2.2.2 (#37, Nov 26 2002, 10:24:37) [MSC 32 bit (Intel)]'
 }}}
 
-== filter（列表过滤器） ==
+== filter（列表数据过滤处理） ==
 - 将一组参数列表传入给定的函数中，该函数返回bool类型。如果函数调用结果为真，则该结果会出现在结果的列表中，结果为假，则被过滤掉。调用的过程同map一样。
 
 {{{class="brush:python"
 # 定义一个取模的lambda方法，并应用于一组列表[1, 2, 3, 4, 5]
 >>> filter(lambda x : x % 2 == 0, [1, 2, 3, 4, 5])
 [2, 4]
+
+# 该方法同样可用映射List的方式实现
+>>> list_a = [1, 2, 3, 4, 5]
+>>> [x for x in list_a if x % 2 == 0]
+[2, 4]
 }}}
 
-== reduce（列表递减调用） ==
+== reduce（列表数据递减处理） ==
 - 将一组参数列表的前两个数作为参数传给指定的函数，并将结果置为列表顶端，同时删除前两个数，依次执行这个过程，返回最终的数。
 - 第三个参数作为一个初始值，代替列表中的第一个数。
 
