update wiki, git

--- a/vimwiki/学习笔记/Linux/内置命令.wiki
+++ b/vimwiki/学习笔记/Linux/内置命令.wiki
@@ -51,7 +51,7 @@ done < data-file
 描述 :: let命令将执行变量的算术操作。在许多情况下，它被看作是复杂的expr版本的一个简化版。
 示例 ::
 {{{class="brush:bash"
-et a=11                 # 与'a=11'相同
+let a=11                # 与'a=11'相同
 let a=a+5               # 等价于let "a = a + 5"
                         # (双引号和空格是这句话更具可读性.)
 echo "11 + 5 = $a"
