update git工具箱 & Android InputEvent

--- a/vimwiki/学习笔记/Android/Event输入系统.wiki
+++ b/vimwiki/学习笔记/Android/Event输入系统.wiki
@@ -13,3 +13,8 @@ _Event输入系统支持键盘、鼠标、摇杆和触摸屏。_
 === Android 2.3实现 ===
 - [[Event事件的实现2_3]]
 
+=== Android 4.0实现 ===
+- [[Event事件的实现4_0]]
+
+== Bug修复 ==
+- [[ICS 4.0无法解锁]]
