--- a/vimwiki/学习笔记/Debian/Debian优化指南.wiki
+++ b/vimwiki/学习笔记/Debian/Debian优化指南.wiki
@@ -1,15 +1,18 @@
 = Debian优化指南 =
-    - [[装机优化一]]
-    - [[装机优化二]]
-    - [[Firefox内存占用高的优化方法]]
-    - [[apt,dpkg,apt-spy详解]]
-    - [[无线网卡配置]]
-    - [[ATI显卡安装]] -------------------------- 更新内核后可能出现黑屏的解决办法
-    - [[修复Grub]]
-    - [[自定义系统备份]]
-    - [[iso镜像文件制作]]
-    - [[架设ftp服务器]]
-    - [[管理和更新多个软件版本]] ------ update-alternatives
-    - [[架设git服务器]]
-    - [[安装fcitx输入法]]
-    - [[修改Linux下默认打开程序]]
+
+%toc
+
+- [[装机优化一]]
+- [[装机优化二]]
+- [[Firefox内存占用高的优化方法]]
+- [[apt,dpkg,apt-spy详解]]
+- [[无线网卡配置]]
+- [[ATI显卡安装]] -------------------------- 更新内核后可能出现黑屏的解决办法
+- [[修复Grub]]
+- [[自定义系统备份]]
+- [[iso镜像文件制作]]
+- [[架设ftp服务器]]
+- [[管理和更新多个软件版本]] ------ update-alternatives
+- [[架设git服务器]]
+- [[安装fcitx输入法]]
+- [[修改Linux下默认打开程序]]
