--- a/vimwiki/学习笔记/Android/持久化.wiki
+++ b/vimwiki/学习笔记/Android/持久化.wiki
@@ -12,7 +12,7 @@ import android.content.SharedPreferences;
 
 - 需要获取SharedPreferences实例,通过该实例来获取和保存用户数据
 
-例程源码(JAVA) --- 数据读取
+== 数据读取 ==
 {{{class="brush:java"
 // 该方法获取默认的Preferences
 SharedPreferences prefs = getPreferences(Context.MODE_PRIVATE); 
@@ -25,12 +25,13 @@ String restoredText = prefs.getString("text", null);
 int selectionStart = prefs.getInt("selection-start", -1);
 }}}
 
-参数mode定义 --- 参见[[Context]]的全局表
-# MODE_PRIVATE --- 0
-# MODE_WORLD_READABLE --- 1
-# MODE_WORLD_WRITEABLE --- 2
+== 参数mode定义 == 
+- 参见[[Context]]的全局表
+    # MODE_PRIVATE --- 0
+    # MODE_WORLD_READABLE --- 1
+    # MODE_WORLD_WRITEABLE --- 2
 
-例程源码(JAVA) --- 数据保存
+== 数据保存 ==
 {{{class="brush:java"
 // 首先生成Editor实例,通过该实例的一系列put*方法加入数据,最后使用commit进行数据保存
 SharedPreferences preferences = getSharedPreferences("RedirectData", Context.MODE_PRIVATE);
