--- a/vimwiki/学习笔记/index.wiki
+++ b/vimwiki/学习笔记/index.wiki
@@ -28,6 +28,7 @@
 
 == 应用软件 ==
     - [[Latex/Latex学习笔记|Latex学习笔记]] ---------------------------- _LaTex是一个基于Tex排版系统的语言_
+    - [[VIM/Vim脚本语法学习|Vim脚本学习笔记]] -------------------------- _VIM是一个强大的编辑器_
 
 ----
 
