--- a/vimwiki/学习笔记/VIM/变量定义.wiki
+++ b/vimwiki/学习笔记/VIM/变量定义.wiki
@@ -15,6 +15,12 @@ v:name —— vim预定义变量
 a:name —— 函数的参变量
 }}}
 
+=== Dictionary ===
+{{{class="brush:bash"
+let g:dictionary_test = {}
+let g:dictionary_test['key'] = 'value'
+}}}
+
 == 有特殊含义的变量 ==
 - 命名方式：
     - $NAME:环境变量（一般变量名都是大写）
