--- a/vimwiki/学习笔记/index.wiki
+++ b/vimwiki/学习笔记/index.wiki
@@ -19,10 +19,11 @@
 ----
 
 == 软件工程 ==
-    - [[PM/系统集成项目管理工程师学习笔记|系统集成项目管理工程师学习笔记]] -------------- _记录学习项目管理的大纲要点_
+    - [[PM/系统集成项目管理工程师学习笔记|《系统集成项目管理工程师》学习笔记]] -------------- _记录学习项目管理的大纲要点_
     - [[Design/设计模式|设计模式]] -------------------------------- _设计模式要点_
     - [[UML/UML简要笔记|UML简要笔记]] -------------------------------- _简要介绍UML_
     - [[软件架构/软件架构|软件架构]] -------------------------------- _记录架构设计、开发模式方面的知识_
+    - [[UNIX编程艺术/UNIX编程艺术|《UNIX编程艺术》学习笔记]] --------------------------------- _记录了《UNIX编程艺术》的知识要点_
 
 ----
 
@@ -45,3 +46,4 @@
 == 其他 ==
     - [[diary/diary|个人日记]]   ------------------------------------ _个人日记_
     - [[网址|一些有用的网址]]    ------------------------------------ 网址
+    - [[VIM/vimwiki示例|vimwiki示例]]
