--- a/vimwiki/学习笔记/Java/Java学习笔记.wiki
+++ b/vimwiki/学习笔记/Java/Java学习笔记.wiki
@@ -34,3 +34,5 @@
     - [[Linux下获取root权限执行程序]]
     - [[使用javamail发送邮件]]
     - [[../Android/GPS辅助数据下载工具|HTTP下载范例]]
+    - [[压缩和解压文件]]
+    - [[Socket通讯]]
