--- a/vimwiki/学习笔记/Linux/Linux系统编程.wiki
+++ b/vimwiki/学习笔记/Linux/Linux系统编程.wiki
@@ -6,6 +6,8 @@
 - [[GNU Makefile规范]]
 - [[Shell编程]]
 
+----
+
 == 系统篇 ==
 - [[ioctl操作]]
 - [[mmap使用详解]]
@@ -15,6 +17,8 @@
 - [[IO多路复用]]
 - [[大端和小端模式]]
 
+----
+
 == 内核篇 ==
-- [[深入理解Linux内核笔记]]
+- [[../Driver/Linux驱动笔记|Linux内核与驱动]]
 - [[sys文件系统]]
