--- a/vimwiki/学习笔记/GO/语法概要.wiki
+++ b/vimwiki/学习笔记/GO/语法概要.wiki
@@ -1,8 +1,10 @@
 = 语法概要 =
 
+%toc
+
 == 变量声明 ==
 变量声明格式: *var* var_name var_type
-{{{class="brush: text"
+{{{class="brush: java"
 var s string = "hello"
 
 const (
@@ -14,18 +16,18 @@ a := 1
 }}}
 
 类型定义: *type* new_type var_type
-{{{class="brush: text"
+{{{class="brush: java"
 type T struct {a, b int}
 type I interface {}
 }}}
 
 Boolean类型: *var* var_name *bool*
-{{{class="brush: text"
+{{{class="brush: java"
 表示true或false的数据类型
 }}}
 
 数字类型: *var* var_name var_type
-{{{class="brush: text"
+{{{class="brush: java"
 uint8       the set of all unsigned  8-bit integers (0 to 255)
 uint16      the set of all unsigned 16-bit integers (0 to 65535)
 uint32      the set of all unsigned 32-bit integers (0 to 4294967295)
@@ -46,12 +48,12 @@ byte        familiar alias for uint8
 }}}
 
 字符串类型: *var* var_name *string*
-{{{class="brush: text"
+{{{class="brush: java"
 var strName string
 }}}
 
 数组声明: *var* var_name *[num]* var_type
-{{{class="brush: text"
+{{{class="brush: java"
 var arrayInt [10]int    #声明10个元素的整形数组
 
 arrayInt[ low:high ]    #对数组进行切片操作
@@ -60,7 +62,7 @@ sum( &[3]int{1, 2, 3} ) #初始化一个整形数组并传递给函数
 }}}
 
 切片类型声明: *var* var_name = *make*([]T, lenth, capacity)
-{{{class="brush: text"
+{{{class="brush: java"
 make([]T, length)
 make([]T, length, capacity)
 
@@ -69,7 +71,7 @@ new([100]int)[0:50]
 }}}
 
 结构类型声明: *struct* {}
-{{{class="brush: text"
+{{{class="brush: java"
 struct {}
 
 struct {
@@ -83,13 +85,13 @@ struct {
 *结构体中的域名不能重复*
 
 指针类型声明: *var* var_name = * *BaseType*
-{{{class="brush: text"
+{{{class="brush: java"
 *int
 *map[string] *chan int
 }}}
 
 函数类型声明: *func* [pack (arg, ...)] *func_name* (ret_type, ...)
-{{{class="brush: text"
+{{{class="brush: java"
 func()
 func(x int)
 func() int
@@ -103,7 +105,7 @@ func(n int) func(p *T)
 }}}
 
 接口类型声明: *type* var_name *interface* {}
-{{{class="brush: text"
+{{{class="brush: java"
 interface{}
 
 interface {
@@ -132,7 +134,7 @@ type File interface {
 *通常可以定义一个结构，通过提供这个结构的一组同名函数来实现接口的继承和重载，接口可以看作是对struct的扩展。*
 
 字典类型声明: *map* *[key_type]* *val_type* {}
-{{{class="brush: text"
+{{{class="brush: java"
 map [string] int
 map [*T] struct { x, y float }
 map [string] interface {}
@@ -143,7 +145,7 @@ make(map[string] int, 100)
 *通常使用make来创建一个map类型: vm := make(map[string]int)*
 
 通道类型声明: ChannelType = *chan* *<-* | *<* *chan* ElementType .
-{{{class="brush: text"
+{{{class="brush: java"
 chan T         // can be used to send and receive values of type T
 chan<- float   // can only be used to send floats
 <-chan int     // can only be used to receive ints
@@ -160,12 +162,12 @@ _一个channel可以使用close或closed关闭。_
 == 流程控制 ==
 
 *labele* 标签:用于 *goto*, *break*, *continue* 的跳转
-{{{class="brush: text"
+{{{class="brush: java"
 Error: _do something_
 }}}
 
 *if* 语句:
-{{{class="brush: text"
+{{{class="brush: java"
 if x > 0 {
     return true;
 }
@@ -180,7 +182,7 @@ if x := f(); x < y {
 }}}
 
 *switch* 语句:
-{{{class="brush: text"
+{{{class="brush: java"
 switch tag {
 default: s3()
 case 0, 1, 2, 3: s1()
@@ -200,7 +202,7 @@ case x == 4: f3()
 }}}
 
 *for* 语句:
-{{{class="brush: text"
+{{{class="brush: java"
 for a < b {
 	a *= 2
 }
