--- a/vimwiki/学习笔记/Android/Android APP.wiki
+++ b/vimwiki/学习笔记/Android/Android APP.wiki
@@ -44,6 +44,7 @@
     - [[xml文件处理]]
     - [[JSON使用]]
     - [[Handler和Message]]
+    - [[信使Messenger]]
     - [[AsyncTask任务处理]]
     - [[Base64编码]]
     - [[Parcel对象]]
