--- a/vimwiki/学习笔记/Android/系统框架部分.wiki
+++ b/vimwiki/学习笔记/Android/系统框架部分.wiki
@@ -7,9 +7,10 @@
 == 架构设计 ==
 - [[init进程解析]]
 - [[程序启动机制]]
-- [[消息处理机制]]
+- [[消息处理机制]] ------ Message、Handler、Looper
+- [[跨进程消息处理机制]] ------ Messenger
 - [[状态机机制]]
-- [[异步通道机制]]
+- [[异步通道机制]] ------ AsyncChannel
 - [[HAL机制]]
 
 == 主要系统组成 ==
