--- a/vimwiki/学习笔记/国学/老子全文注解.wiki
+++ b/vimwiki/学习笔记/国学/老子全文注解.wiki
@@ -4,7 +4,6 @@
 
 == 第一章 - 道可道， ==
 - 原文
-
 {{{class="brush:text"
     道可道也①，非恒道也②。名可名也③，非恒名也。无名④，天地之始也；有名⑤，万物之母也⑥。
     故恒无欲也⑦，以观其眇⑧；恒有欲也，以观其所徼⑨。两者同出，异名同谓⑩。
@@ -12,7 +11,6 @@
 }}}
 
 - 译文
-
 {{{class="brush:text"
     “道”如果可以用言语来表述，那它就是常“道”(“道”是可以用言语来表述的，它并非一般的“道”)；
 “名”如果可以用文辞去命名，那它就是常“名”(“名”也是可以说明的，它并非普通的“名”)。“无”可以用
@@ -25,7 +23,6 @@
 }}}
 
 - 注释
-
 {{{class="brush:text"
 ①第一个“道”是名词，指的是宇宙的本原和实质，引申为原理、原则、真理、规律等。第二个“道”是动词。
 指解说、表述的意思，犹言“说得出”。
@@ -45,7 +42,6 @@
 
 == 第二章 - 天下皆知美之为美， ==
 - 原文
-
 {{{class="brush:text"
     天下皆知美之为美，恶已①；皆知善，斯不善矣②。
     有无之相生也③，难易之相成也，长短之相刑也④，高下之相盈也⑤，音声之相和也⑥，先后之相随，恒也。
@@ -54,7 +50,6 @@
 }}}
 
 - 译文
-
 {{{class="brush:text"
     天下人都知道美之所以为美，那是由于有丑陋的存在。都知道善之所以为善，那是因为有恶的存在。
 所以有和无互相转化，难和易互相形成，长和短互相显现，高和下互相充实，音与声互相谐和，前和后互相
@@ -65,7 +60,6 @@
 }}}
 
 - 注释
-
 {{{class="brush:text"
 ①恶已：恶、丑。已，通“矣”。
 ②斯：这。
@@ -82,7 +76,6 @@
 == 第三章 - 不上贤， ==
 
 - 原文
-
 {{{class="brush:text"
     不上贤①，使民不争；不贵难得之货②，使民不为盗③；不见可欲④，使民不乱。
     是以圣人之治也，虚其心⑤，实其腹，弱其志⑥，强其骨，恒使民无知、无欲也。
@@ -90,7 +83,6 @@
 }}}
 
 - 译文
-
 {{{class="brush:text"
     不推崇有才德的人，导使老百姓不互相争夺；不珍爱难得的财物，导使老百姓不去偷窃；
 不显耀足以引起贪心的事物，导使民心不被迷乱。
@@ -100,7 +92,6 @@
 }}}
 
 - 注释
-
 {{{class="brush:text"
 ①上贤：上，同“尚”，即崇尚，尊崇。贤：有德行、有才能的人。
 ②贵：重视，珍贵。货：财物。
@@ -116,7 +107,6 @@
 == 第四章 - 道冲， ==
 
 - 原文
-
 {{{class="brush:text"
     道冲①，而用之有弗盈也②。渊呵③！似万物之宗④。
     锉其兑⑤，解其纷⑥，和其光⑦，同其尘⑧。湛呵⑨！似或存⑩。
@@ -124,7 +114,6 @@
 }}}
 
 - 译文
-
 {{{class="brush:text"
     大“道”空虚无形，但它的作用又是无穷无尽。深远啊！它好象万物的祖宗。
     消磨它的锋锐，消除它的纷扰，调和它的光辉，混同于尘垢。隐没不见啊，又好象实际存在。
@@ -132,7 +121,6 @@
 }}}
 
 - 注释
-
 {{{class="brush:text"
 ①冲：通盅（chong)，器物虚空，比喻空虚。
 ②有弗盈：有，通又。盈：满，引申为尽。
@@ -152,7 +140,6 @@
 == 第五章 - 天地不仁 ==
 
 - 原文
-
 {{{class="brush:text"
     天地不仁，以万物为刍狗①；圣人不仁，以百姓为刍狗。
     天地之间，其犹橐龠乎②？虚而不屈③，动而俞出④。
@@ -160,7 +147,6 @@
 }}}
 
 - 译文
-
 {{{class="brush:text"
     天地是无所谓仁慈的，它没有仁爱，对待万事万物就像对待刍狗一样，任凭万物自生自灭。
 圣人也是没有仁受的，也同样像刍狗那样对待百姓，任凭人们自作自息。
@@ -169,7 +155,6 @@
 }}}
 
 - 注释
-
 {{{class="brush:text"
 ①刍（chu）狗：用草扎成的狗。古代专用于祭祀之中，祭祀完毕，就把它扔掉或烧掉。比喻轻贱无用的东西。
 在本文中比喻：天地对万物，圣人对百姓都因不经意、不留心而任其自长自消，自生自灭。正如元代吴澄据说：
@@ -184,3 +169,81 @@
 ⑥守中：中，通冲，指内心的虚静。守中：守住虚静。
 }}}
 
+== 第六章 - 谷神不死 ==
+
+- 原文
+{{{class="brush:text"
+    谷神不死①，是谓玄牝②。玄牝之门③，是谓天地之根。绵绵呵④！其若存⑤！用之不堇⑥。
+}}}
+
+- 译文
+{{{class="brush:text"
+    生养天地万物的道（谷神）是永恒长存的，这叫做玄妙的母性。玄妙母体的生育之产门，这就是天地的根本。
+连绵不绝啊！它就是这样不断的永存，作用是无穷无尽的。
+}}}
+
+- 注释
+{{{class="brush:text"
+①谷神：过去据高亨说：谷神者，道之别名也。谷读为毂，《尔雅·释言》：“毂，生也。”
+《广雅·释诂》：“毂，养也。”谷神者，生养之神。另据严复在《老子道德经评点》中的说法，
+“谷神”不是偏正结构，是联合结构。谷，形容“道”虚空博大，象山谷；神，形容“道”变化无穷，很神奇。
+②玄牝(pin)：玄，原义是深黑色，在《老子》书中是经常出现的重要概念。有深远、神秘、
+微妙难测的意思。牝：本义是是雌性的兽类动物，这里借喻具有无限造物能力的“道”。玄牝指玄妙的母性。
+这里指孕育和生养出天地万物的母体。
+③门：指产门。这里用雌性生殖器的产门的具体义来比喻造化天地生育万物的根源。
+④绵绵：连绵不绝的样子。
+⑤若存：若，如此，这样。若存：据宋代苏辙解释，是实际存在却无法看到的意思。
+⑥堇（jin）：通勤。作“尽”讲。
+}}}
+
+== 第七章 - 天长、地久 ==
+
+- 原文
+{{{class="brush:text"
+    天长，地久①。天地之所以能长且久者，以其不自生也②，故能长生。
+    是以圣人后其身而身先③，外其身而身存④，非以其无私邪⑤？故能成其私。
+}}}
+
+- 译文
+{{{class="brush:text"
+    天长地久，天地所以能长久存在，是因为它们不为了自己的生存而自然地运行着，所以能够长久生存。
+因此，有道的圣人遇事谦退无争，反而能在众人之中领先；将自己置于度外，反而能保全自身生存。这不正
+是因为他无私吗？所以能成就他的自身。
+}}}
+
+- 注释
+{{{class="brush:text"
+①天长地久；长、久：均指时间长久。
+②以其不自生也：因为它不为自己生存。以，因为。
+③身：自身，自己。以下三个“身”字同。先：居先，占据了前位。此是高居人上的意思。
+④外其身：外，是方位名词作动词用，使动用法，这里是置之度外的意思。
+⑤邪（ye）：同“耶”，助词，表示疑问的语气。
+}}}
+
+== 第八章 - 上善若水 ==
+- 原文
+{{{class="brush:text"
+    上善若水①。水善利万物而不争，处众人之所恶②，故几于道③。
+    居，善地；心，善渊④；与，善仁⑤；言，善信；政，善治⑥；事，善能；动，善时⑦。夫唯不争，故无尤⑧。
+}}}
+
+- 译文
+{{{class="brush:text"
+    最善的人好像水一样。水善于滋润万物而不与万物相争，停留在众人都不喜欢的地方，所以最接近于“道”。
+    最善的人，居处最善于选择地方，心胸善于保持沉静而深不可测，待人善于真诚、友爱和无私，说话善于格守
+信用，为政善于精简处理，能把国家治理好，处事能够善于发挥所长，行动善于把握时机。最善的人所作所为正因
+为有不争的美德，所以没有过失，也就没有怨咎。
+}}}
+
+- 注释
+{{{class="brush:text"
+①上善若水：上，最的意思。上善即最善。这里老子以水的形象来说明"圣人"是道的体现者，因为圣人的言行有类于水，
+而水德是近于道的。
+②处众人之所恶：即居处于众人所不愿去的地方。
+③几于道：几，接近。即接近于道。
+④渊：沉静、深沉。
+⑤与，善仁：与，指与别人相交相接。善仁，指有修养之人。
+⑥政，善治：为政善于治理国家，从而取得治绩。
+⑦动，善时：行为动作善于把握有利的时机。
+⑧尤：怨咎、过失、罪过。
+}}}
